# opengl-b-splines

./: Application.cpp  Application.h  CMakeLists.txt  README.md  config.h  main.cpp
maths/: Spline.cpp  Spline.h  Vector2.cpp  Vector2.h
